[package]
name = "cobblestone"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
base64 = "0.22"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
tempfile = "3.26.0"
